--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.profiles.active=test
+spring.jpa.open-in-view=true
+
 spring.application.name=GorillaGrooveApp
+
+# Configurações do banco de dados H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuração do dialeto H2 para o Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Configurações do Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
